[project]
authors = [{name = "Jacob Valdez", email = "jacobfv123@gmail.com"}]
dependencies = [
    "glom>=24.11.0",
    "pydantic>=2.11.4",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
name = "tensacode"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
tensacode = { path = ".", editable = true }

[tool.pixi.tasks]
